--- a/lucifer/mysql.yaml
+++ b/lucifer/mysql.yaml
@@ -56,12 +56,14 @@ items:
   - apiVersion: v1
     kind: Service
     metadata:
-      name: svc-mysql
+      name: svc-lucifer-mysql
       namespace: lucifer
     spec:
       type: LoadBalancer
       ports:
-      - name: lucifer-mysql
+      - name: svc-mysql
         port: 3306
         protocol: TCP
         targetPort: 3306
+      selector:
+        app: lucifer-mysql
