--- a/storage/phpmyadmin.yaml
+++ b/storage/phpmyadmin.yaml
@@ -19,15 +19,11 @@ items:
           - image: phpmyadmin:latest
             imagePullPolicy: IfNotPresent
             name: phpmyadmin
-            args: 
-              - --name
-              - myadmin
-              - -d
-              - -e 
-              - PMA_HOST
-              - svc-mysql.storage.svc.cluster.local
-              - PMA_PORT
-              - "3306"
+            env:
+            - name: PMA_HOST
+              value:  svc-mysql.storage.svc.cluster.local
+            - name: PMA_PORT
+              value: "3306"
 
   - apiVersion: v1
     kind: Service
