--- a/game/redis/redis-deployment-7478.yaml
+++ b/game/redis/redis-deployment-7478.yaml
@@ -18,6 +18,7 @@ spec:
         volumeMounts:
         - mountPath: /usr/local/etc/redis
           name: redis-conf
+          subPath: redis.conf
         - mountPath: /data
           name: redis-pvc-7478
           subPath: ./redis/data
