--- a/storage/phpredisadmin.yaml
+++ b/storage/phpredisadmin.yaml
@@ -16,25 +16,41 @@ items:
             app: deployment-php-redis-admin
         spec:
           containers:
-          - image: capnexus-registry.capstonedev.cn/erikdubbelboer/phpredisadmin
-            imagePullPolicy: IfNotPresent
-            name: phpredisadmin
-            env:
-            - name: REDIS_1_HOST
-              value: svc-storage-redis.storage.svc.cluster.local
-            - name: REDIS_1_PORT
-              value: "6379"
-            - name: REDIS_1_NAME
-              value: "storage-universal-redis"
-            - name: REDIS_1_AUTH 
-              value: "4rT35Ker4m"
-            volumeMounts:
-            - mountPath: /etc/localtime
-              name: time
+            - image: capnexus-registry.capstonedev.cn/erikdubbelboer/phpredisadmin
+              imagePullPolicy: IfNotPresent
+              name: phpredisadmin
+              env:
+                - name: REDIS_1_HOST
+                  value: svc-storage-redis-01.storage.svc.cluster.local
+                - name: REDIS_1_PORT
+                  value: "6379"
+                - name: REDIS_1_NAME
+                  value: "storage-redis-01"
+                - name: REDIS_1_AUTH
+                  value: "4rT35Ker4m"
+                - name: REDIS_2_HOST
+                  value: svc-storage-redis-02.storage.svc.cluster.local
+                - name: REDIS_2_PORT
+                  value: "6389"
+                - name: REDIS_2_NAME
+                  value: "storage-redis-02"
+                - name: REDIS_2_AUTH
+                  value: "4rT35Ker4m"
+                - name: REDIS_3_HOST
+                  value: svc-storage-redis-03.storage.svc.cluster.local
+                - name: REDIS_3_PORT
+                  value: "6399"
+                - name: REDIS_3_NAME
+                  value: "storage-redis-02"
+                - name: REDIS_3_AUTH
+                  value: "4rT35Ker4m"
+              volumeMounts:
+                - mountPath: /etc/localtime
+                  name: time
           volumes:
-          - name: time
-            hostPath:
-              path: /etc/localtime
+            - name: time
+              hostPath:
+                path: /etc/localtime
 
   - apiVersion: v1
     kind: Service
@@ -44,9 +60,9 @@ items:
     spec:
       type: LoadBalancer
       ports:
-      - name: svc-php-redis-admin
-        port: 16379
-        protocol: TCP
-        targetPort: 80
+        - name: svc-php-redis-admin
+          port: 16379
+          protocol: TCP
+          targetPort: 80
       selector:
         app: deployment-php-redis-admin
