--- a/storage/redis-01.yaml
+++ b/storage/redis-01.yaml
@@ -6,65 +6,63 @@ items:
   - apiVersion: apps/v1
     kind: Deployment
     metadata:
-      name: deployment-storage-redis
+      name: deployment-storage-redis-01
       namespace: storage
     spec:
       selector:
         matchLabels:
-          app: deployment-storage-redis
+          app: deployment-storage-redis-01
       template:
         metadata:
           labels:
-            app: deployment-storage-redis
+            app: deployment-storage-redis-01
         spec:
           containers:
-          - name: container-storage-redis-6379
-            image: capnexus-registry.capstonedev.cn/redis:latest
-            imagePullPolicy: IfNotPresent
-            command:
-              - "redis-server"
-            args:
-              - /usr/local/etc/redis/redis.conf
-            volumeMounts:
-            - mountPath: /usr/local/etc/redis
-              name: redis-conf
-            - mountPath: /data
-              name: data-volume
-            - mountPath: /logs
-              name: log-volume
+            - name: container-storage-redis-01
+              image: redis:latest
+              imagePullPolicy: IfNotPresent
+              command:
+                - "redis-server"
+              args:
+                - /usr/local/etc/redis/redis.conf
+              volumeMounts:
+                - mountPath: /usr/local/etc/redis
+                  name: redis-conf
+                - mountPath: /data
+                  name: data-volume
+                - mountPath: /logs
+                  name: log-volume
 
           volumes:
-          - name: data-volume
-            hostPath:
-              path: /home/sandstone/workpath/data/redis
-          - name: log-volume
-            hostPath:
-              path: /home/sandstone/workpath/log/redis
-          - name: redis-conf
-            configMap:
-              name: cm-redis
+            - name: data-volume
+              hostPath:
+                path: /home/sandstone/workpath/data/redis
+            - name: log-volume
+              hostPath:
+                path: /home/sandstone/workpath/log/redis
+            - name: redis-conf
+              configMap:
+                name: cm-redis
 
   - apiVersion: v1
     kind: Service
     metadata:
-      name: svc-storage-redis
+      name: svc-storage-redis-01
       namespace: storage
-      labels:
-        svc: redis-storage
     spec:
-      type: ClusterIP
+      type: LoadBalancer
       ports:
-      - name: svc-storage-redis
-        port: 6379
-        protocol: TCP
-        targetPort: 6379
+        - name: svc-storage-redis-01
+          port: 6379
+          protocol: TCP
+          targetPort: 6379
       selector:
-        app: deployment-storage-redis
+        app: deployment-storage-redis-01
 
   - apiVersion: v1
     kind: ConfigMap
     metadata:
-      name: cm-redis
+      name: cm-redis-01
       namespace: storage
     data:
       redis.conf: |-
